plugins/kotlin/idea/tests/testData/multiplatform/expectActualLineMarkers/sharedLinux/sharedNative.kt
actual class <!LINE_MARKER("descr='Has expects in common module'")!>ActualizedInSharedAndLeaf<!>
